--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 
 # LEMpack <img src='man/figures/logo.jpg' align="right" height="139" />
 
-[`LEMpack`](https://github.com/HERU-LEM/LEMpack) contains all necessary code and data to run our dynamic compartmental simulation model for the localized HIV microepidemics in Atlanta, Baltimore, Los Angeles, Miami, NYC, Seattle.
+[`LEMpack`](https://github.com/HERU-LEM/LEMpackHIV) package and github repository contains all model functions, code modules and data to run our dynamic compartmental simulation model for the localized HIV microepidemics in Atlanta, Baltimore, Los Angeles, Miami, NYC, Seattle.
 
 # Preliminaries
 - Install [RStudio](https://www.rstudio.com/products/rstudio/download/)
@@ -27,28 +27,30 @@ install.packages("devtools")
 
 # Usage and installation 
 
-1. Open R Studio and load project file:
+(@) Open R Studio and load project file:
 
-- Double-click "LEMpackHIV/LEMpackHIV.Rproj"
+- Load file: *LEMpackHIV/LEMpackHIV.Rproj*
 
-2. Download and install LEMpackHIV package from [GitHub](https://github.com) with:
+(@) Download and install LEMpackHIV package from [GitHub](https://github.com) with:
 
 ```{r, eval=FALSE}
 devtools::install_github("HERU-LEM/LEMpackHIV")
 ```
 
-3. Run R code modules
-  a. Model setup [github link](https://github.com/benenns/LEMpackTEST/tree/master/R/01_Setup)
+## R code modules
   
+  i. [Model setup](https://github.com/benenns/LEMpackTEST/tree/master/R/01_Setup)
+    - Contains R scripts for core modules. These scripts are called by code in *R/02_Run_model* and *R/03_Analysis*
   
-  b. Run model and generate outputs [github link](https://github.com/benenns/LEMpackTEST/tree/master/R/02_Run_model)
+  ii. [Run model and generate outputs](https://github.com/benenns/LEMpackTEST/tree/master/R/02_Run_model)
+    - These scripts are used to run the model and produce outputs for single interventions and combinations, as well as deterministics and PSA runs.
   
-  
-  c. Analysis [github link](https://github.com/benenns/LEMpackTEST/tree/master/R/03_Analysis)
+  iii. [Analysis](https://github.com/benenns/LEMpackTEST/tree/master/R/03_Analysis)
+    - These scripts use raw model outputs from *R/02_Run_model* into the primary analyses: CEA, incidence, cost breakdown, OCIS, production functions, and plots.
 
 # Background Material
 
-The evidence synthesis process and development of the LEM model is detailed in the following manuscripts:
+For more detail on the evidence synthesis and model development, please see the following manuscripts:
 
 - Krebs, E., Enns, B., Wang, L., Zang, X., Panagiotoglou, D., Del Rio, C., Dombrowski, J., Feaster, D. J., Golden, M., Granich, R., Marshall, B., Mehta, S. H., Metsch, L., Schackman, B. R., Strathdee, S. A., Nosyk, B., & localized HIV modeling study group (2019). ["Developing a dynamic HIV transmission model for 6 U.S. cities: An evidence synthesis"](https://dx.plos.org/10.1371/journal.pone.0217559). PloS one, 14(5), e0217559. https://doi.org/10.1371/journal.pone.0217559
 
@@ -57,5 +59,3 @@ The evidence synthesis process and development of the LEM model is detailed in t
 - Krebs, E., Zang, X., Enns, B., Min, J. E., Behrends, C. N., Del Rio, C., Dombrowski, J. C., Feaster, D. J., Gebo, K. A., Golden, M., Marshall, B., Metsch, L. R., Schackman, B. R., Shoptaw, S., Strathdee, S. A., Nosyk, B., & Localized Economic Modeling Study Group (2020). ["The impact of localized implementation: determining the cost-effectiveness of HIV prevention and care interventions across six United States cities"](https://journals.lww.com/aidsonline/Abstract/2020/03010/The_impact_of_localized_implementation_.12.aspx). AIDS (London, England), 34(3), 447–458. https://doi.org/10.1097/QAD.0000000000002455
 
 - Nosyk, B., Zang, X., Krebs, E., Enns, B., Min, J. E., Behrends, C. N., Del Rio, C., Dombrowski, J. C., Feaster, D. J., Golden, M., Marshall, B., Mehta, S. H., Metsch, L. R., Pandya, A., Schackman, B. R., Shoptaw, S., Strathdee, S. A., & Localized HIV Modeling Study Group (2020). ["Ending the HIV epidemic in the USA: an economic modelling study in six cities"](https://www.thelancet.com/journals/lanhiv/article/PIIS2352-3018(20)30033-3/fulltext). The lancet. HIV, 7(7), e491–e503. https://doi.org/10.1016/S2352-3018(20)30033-3
-
-
