--- a/vignettes/aa-introduction.Rmd
+++ b/vignettes/aa-introduction.Rmd
@@ -32,7 +32,7 @@ knitr::write_bib(c(
 
 # The LEM model {-}
 
-In this R package, we provide the code and input data for running our dynamic, compartmental HIV transmission model that replicates the city-level HIV micro epidemic for six US cities: Atlanta; Baltimore; Los Angeles (LA); Miami; New York City (NYC); and Seattle (King County) [@core]. We simulate a population of individuals susceptible to HIV through the course of infection (if ever), diagnosis, treatment with antiretroviral therapy (ART), and ART dropout over a time horizon of 20 years [@interventions; @calibration].
+In this R package, we provide the code and input data for running our dynamic, compartmental HIV transmission model that replicates the city-level HIV micro epidemic for six US cities: Atlanta; Baltimore; Los Angeles (LA); Miami; New York City (NYC); and Seattle (King County) [@core]. We simulate the population of individuals susceptible to HIV through the course of infection (if ever), diagnosis, treatment with antiretroviral therapy (ART), and ART dropout over a time horizon of 20 years [@interventions; @calibration].
 
 
 In each city, the adult population 15–64 is partitioned by sex at birth, HIV risk group [men-who-have-sex-with-men (MSM), people who inject drugs (PWID), MSM who inject drugs (MWID) and heterosexuals (HET)], race/ethnicity (black/African American, Hispanic/Latinx and non-Hispanic white/others) and sexual risk behavior level (high-risk vs. low-risk). Susceptible (HIV-uninfected) individuals could be screened for HIV prior to HIV infections, and high-risk MSM (including MSM-PWID) could receive pre-exposure prophylaxis (PrEP). Individuals within each of these 42 groups (See Figure 1.0) progress through several health states outlined in Figure 1.1 \ref{fig:01_model_diagram.png}. 
@@ -54,6 +54,6 @@ Susceptible individuals start in the health state (denoted by S~x~), and can be 
 ![Figure 1.1 State-transition diagram of the model.](../figs/01_model_diagram.png) 
 
 
-Our model requires estimates for 1667 total parameters; where data were not available, representative for specific sub populations of interest, up-to-date, and/or exhibiting large variation. We undertook extensive model calibration and validation detailed elsewhere [@calibration]. In brief, we calibrated the model to calibration targets that provided the most concrete indicators of the course of each city’s micro epidemic (i.e. total HIV prevalence, new diagnoses, total deaths among PLWH by risk and ethnic group as tracked in city-specific surveillance data). Internal validation of the model was verified by performing a series of checks - cross checking of each mathematical equation and program coding script, double programming for the Force of Infection (FoI) module, extensive model walk-throughs and extreme value analyses on several scenarios. Lastly, we performed external validation of the calibrated model by comparing city-specific model projections to external estimates of HIV incidence, which cannot be truly observed.
+Our model requires estimates for 1667 total parameters. Where data were not available, representative for specific subpopulations of interest, up-to-date, and/or exhibiting large variation. We undertook extensive model calibration and validation detailed elsewhere [@calibration]. We calibrated the model to targets that provided the best and most reliable indicators of the course of each city’s micro epidemic (i.e. total HIV prevalence, new diagnoses, total deaths among PLWH by risk and ethnic group as tracked in city-specific surveillance data). Internal validation of the model was verified by performing a series of checks - cross checking of each mathematical equation and program coding script, double programming for the Force of Infection (FoI) module, extensive model code walk-throughs and extreme value analyses on several scenarios. Lastly, we performed external validation of the calibrated model by comparing city-specific model projections to external estimates of HIV incidence, which are not observed.
 
 # References {-}
