--- a/vignettes/dd-interventions.Rmd
+++ b/vignettes/dd-interventions.Rmd
@@ -25,17 +25,17 @@ knitr::opts_chunk$set(
 # 3.0 Generate possible intervention combinations {-}
 
 
-In this section, we describe the method for creating all possible combinations of the 16 public health interventions selected from the the CDC’s Compendium of Evidence-Based Interventions and Best Practices for HIV Prevention [@EBIcompendium] using the R script *CascadeCEA-Interventions-0-Function-scale.interventions.combination.R*. See Figure 3 below for the list of interventions and their respective categories (*Protect, Diagnose, Treat*). We excluded combinations that would not be practically implemented jointly, termed “mutually exclusive combinations” (e.g. two HIV testing interventions delivered in primary care).
+In this section, we describe the method for creating all possible combinations of the 16 public health interventions selected from the the CDC’s Compendium of Evidence-Based Interventions and Best Practices for HIV Prevention [@EBIcompendium] using the `scale.interventions.combination` function in `LEMpackHIV`. See Figure 3 below for the list of interventions and their respective categories (**Protect, Diagnose, Treat**). We excluded combinations that would not be practically implemented jointly, termed “mutually exclusive combinations” (e.g. two HIV testing interventions delivered in primary care).
 
 ![Figure 3.0 Evidence based interventions selected from the the CDC’s Compendium of Evidence-Based Interventions and Best Practices for HIV Prevention. \label{fig:selected evidence based interventions}](../figs/03_evidence_based_int.png)  
 
 \vspace{12pt}
 
-Next, we set intervention parameters using the *CascadeCEA-Interventions-0-Function-intervention.model.combination.R* script, and then use the *CascadeCEA-Interventions-0-Function-scale.interventions.combination.R* script to calculate the scale of delivery inputs at each time step. Both are found in the *R* directory. Recall that scale refers to the proportion of a target population that is provided with an intervention. For HIV prevention programs, scale of delivery was the annual rate of expanded access, or additional scale-up, estimated using the best-available program-specific evidence. In contrast, for HIV testing and care interventions, scale of delivery was defined as the product of setting specific reach and adoption for each intervention *i*, target population *j* and healthcare setting *k*, where reach is defined as the participation rate in a given intervention, conditional on the probability an  individual will access services in setting *k* and the probability the individual will accept the intervention being delivered.
+Next, we set intervention parameters using the `intervention.model.combination` function, and then use the `scale.interventions.combination` function to calculate the scale of delivery inputs at each time step. Both are included in `LEMpackHIV` and the code can be found in the [*R*](https://github.com/HERU-LEM/LEMpackHIV/tree/master/R) directory of the github repository. Recall that scale refers to the proportion of a target population that is provided with an intervention. For HIV prevention programs, scale of delivery was the annual rate of expanded access, or additional scale-up, estimated using the best-available program-specific evidence. In contrast, for HIV testing and care interventions, scale of delivery was defined as the product of setting specific reach and adoption for each intervention *i*, target population *j* and healthcare setting *k*, where reach is defined as the participation rate in a given intervention, conditional on the probability an  individual will access services in setting *k* and the probability the individual will accept the intervention being delivered.
 
 $$Scale_{i,j} = reach_{j,k} \times adoption_{i,k}$$
 
-Lastly, to set indicators of modifying parameters in ODE model we use the function in *CascadeCEA-Interventions-0-Function-true.false.interventions.combination.R*.
+To set indicators of modifying parameters in ODE model we use the function `true.false.interventions.combination`.
 
 
 # 3.1 Derive intervention scale-up {-}
@@ -76,7 +76,7 @@ Table 3.0: Stratification of interventions input data
 
 In this component we run several R scripts that set up the production of model outcomes for output to excel. Model projected outcomes such as incremental and total costs (2018 USD) and QALYs gained are produced for each city, for the combinations of interventions, considering implementation and sustainment periods determined in Section 3.1.
 
-Point estimates, and upper and lower bounds for estimates are first organized in arrays using `accumulate.outcomes.combination`. The number of infections for a given year (annual incidence rate) and cumulatively over several time horizons (5, 10, 20 years) are calculated for each city using `time.period.infections`. Both sets of output results (costs and QALYs, and number of infections) can then be exported to excel using the `write.excel` function as seen in *CascadeCEA-Interventions-0-Output-write.excel.R* script. [consider adding in a screenshot of what the output results in Excel so users know what to expect?] Lastly, population lists and number of infections for each time step, cost-effectiveness analyses results etc. are calculated and aggregated using the 'comb.eva.func.R` script. 
+Point estimates, and upper and lower bounds for estimates are first organized in arrays using `accumulate.outcomes.combination`. The number of infections for a given year (annual incidence rate) and cumulatively over several time horizons (5, 10, 20 years) are calculated for each city using `time.period.infections`. Both sets of output results (costs and QALYs, and number of infections) can then be exported to excel using *CascadeCEA-Interventions-0-Output-write.excel.R*. Lastly, population lists and number of infections for each time step, cost-effectiveness analyses results etc. are calculated and aggregated using the `comb.eva.func.R` function. 
 
 
 # References {-}
