--- a/vignettes/ee-run_model.Rmd
+++ b/vignettes/ee-run_model.Rmd
@@ -21,11 +21,18 @@ knitr::opts_chunk$set(
 )
 ```
 
-In this section we work to combine the components of Sections 1-3 to answer questions  of interest for each city given best available evidence, and to quantify the value of potential further research. After the loading of model functions (section 4.0 below), analysis takes place over two subcomponents - deterministic model analysis of combinations of interventions and deterministic model analysis of single interventions. We also conduct a probability sensitivity analysis (PSA) for each subcomponent. This work produces standard CEA results and quantifies the uncertainty of our inputs and decisions. 
+In this section we work to combine the components of Sections 1-3 to run the model and produce the raw outputs, which will be later be used for analysis. After the loading of model functions (section 4.0 below), analysis takes place over two subcomponents - deterministic model analysis of combinations of interventions and deterministic model analysis of single interventions. We also conduct a probability sensitivity analysis (PSA) for each subcomponent. This work produces standard CEA results and quantifies the uncertainty of our inputs and decisions. 
 
 # 4.0 Load model functions {-}
 
-In this component we run several R scripts to load the model functions necessary for deterministic model runs and probabilistic sensitivity analyses (PSA). First we load our baseline workspace using *CascadeCEA-Interventions-1-LoadBaselineWorkspace.R* found in the *R* directory. This involves loading the needed R packages from libraries, and setting base model values (ie. interventions and CEA parameters, set time period, time steps, discount rate etc.). Some key base model values and what they are currently set to are provided in Table 4.0. 
+The core model functions are automatically loaded when users install the `LEMpackHIV` R package, and load `library(LEMpackHIV)`:
+
+```{r, eval=FALSE}
+devtools::install_github("HERU-LEM/LEMpackHIV")
+```
+
+
+Some key base model values (i.e. interventions and CEA parameters, set time period, time steps, discount rate etc.) for *CascadeCEA-Interventions-1-LoadBaselineWorkspace.R* and what they are currently set to are provided in Table 4.0. 
 
 Table 4.0: Sample base model parameters with their R name and value
 
@@ -39,13 +46,11 @@ Table 4.0: Sample base model parameters with their R name and value
 | Discount rate for cost and QALY   | `Discounting`     | 0.03      |
 
 
-To load model base functions (as detailed in Section 3.0), we use *CascadeCEA-Interventions-1-LoadFunctions.R*. Following this, we use *CascadeCEA-Interventions-1-LoadParameterWorkspace-Combination.R* to set global and free model parameters such as intervention scales and effectiveness, city and state level costs,  based on calibrated values for the respective parameter. Also in this script - we call model inputs from files named `Evidence-Inputs-Master.xlsx` and `Evidence-Inputs-Master-Ideal.xlsx` stored in the *data* directory, and initialize the model. Finally, we set parameter names using the *CascadeCEA-Interventions-1-ParNamesExportIntModel.R* script found in the *R* directory. 
-
-We also load some secondary model functions which have been created to help produce plots and outputs with color, labels etc., use *CascadeCEA-Interventions-1-LoadSecondaryFunctions.R* from the *R* directory. 
+*CascadeCEA-Interventions-1-LoadParameterWorkspace-Combination.R* sets global and free model parameters such as intervention scales and effectiveness, city and state level costs,  based on calibrated values for the respective parameter. Also in this script - we call model inputs from files named `Evidence-Inputs-Master.xlsx` and `Evidence-Inputs-Master-Ideal.xlsx` stored in the *data* directory, and initialize the model. Finally, we set parameter names using the *CascadeCEA-Interventions-1-ParNamesExportIntModel.R* script found in the *R* directory. **Note that the scripts included in *01_Setup* and main *R* folders of the github repository will automatically be called by subsequent modules, and do not need to be run on their own.**
 
 # 4.1 Deterministic model run for combinations of interventions {-}
 
-In this component (use *CascadeCEA-Interventions-2-RunModelAndAccum-Combination-Deterministic.R*), we draw on model functions and data loaded in previous sections to run a deterministic model for estimating accumulated costs and epidemiological outcomes of combinations of interventions for each city or all cities. Intervention outcome matrices are produced (`outcome.comb.mx`) [insert more details about the matrices produced, I see 3 matrices - 1:6, 7:32 and 33:44]; a list of outcomes and respective R labels are provided in Table 4.1. Note that we considered a 20-year time horizon (2020–2040) to capture the long-term individual benefits of ART and second-order transmission effects. Both costs and QALYs were reported using a 3% annual discount rate.
+In this component (use *CascadeCEA-Interventions-2-RunModelAndAccum-Combination-Deterministic.R*), we run a deterministic model for estimating accumulated costs and epidemiological outcomes of combinations of interventions for individual cities or all cities. Intervention outcome matrices are produced (`outcome.comb.mx`), with a list of outcomes and respective R labels are provided in Table 4.1. Note that we used a 20-year time horizon (2020–2040) in our main analysis, to capture the long-term individual benefits of ART and second-order transmission effects [@core]. Both costs and QALYs were reported using a 3% annual discount rate.
 
 Table 4.1: Description of model outcomes with `R` names 
 
@@ -72,18 +77,18 @@ Table 4.1: Description of model outcomes with `R` names
 
 # 4.2 Probabilistic sensitivity analysis (PSA) for combinations {-}
 
-In this component we perform PSA on the deterministic model run done in component 4.2 to evaluate the extent of parameter uncertainty for each intervention. For each city, we used the 2000 best-fitting calibrated parameter sets from 10,000 calibration runs, sampling all non-calibrated parameters simultaneously from distributions that were previously developed for each model parameter [@evsynth]. Intervention outcome matrices are produced (`outcome.comb.SA.mx`), outcomes and respective labels in R are provided in Table 4.1. 
+In this component we perform PSA on the deterministic model run done in component 4.2 to evaluate the extent of parameter uncertainty for each intervention. For each city, we used the 2000 best-fitting calibrated parameter sets from 10,000 calibration runs, sampling all non-calibrated parameters simultaneously from distributions that were previously developed for each model parameter [@calibration; @evsynth]. Intervention outcome matrices are produced (`outcome.comb.SA.mx`), outcomes and respective labels in R are provided in Table 4.1. 
 
-To run PSA on the optimal combination of implementation strategy (OCIS) use *CascadeCEA-Interventions-2-RunModelAndAccum-Combination-PSA-OCIS.R* which can be found in the *R* directory. 
+To run PSA on the optimal combination of implementation strategy (OCIS) use *CascadeCEA-Interventions-2-RunModelAndAccum-Combination-PSA-OCIS.R* which can be found in the *02_Run_model* directory. 
 
-To run PSA on the combinations proximal to the OCIS use *CascadeCEA-Interventions-2-RunModelAndAccum-Combination-PSA-Proximal.R* which can also be found in the *R* directory. 
-
+To run PSA on the combinations proximal to the OCIS use *CascadeCEA-Interventions-2-RunModelAndAccum-Combination-PSA-Proximal.R* which can also be found in the *02_Run_model* directory. 
 
 # 4.3 Deterministic model run for single interventions {-}
-This component estimates accumulated costs and epidemiological outcomes for a *single* intervention rather than a combination of interventions (use *CascadeCEA-Interventions-2-RunModelAndAccum-SingleIntervention-Deterministic.R*). This component is similar to component 4.2 in the sense that we draw on model functions and data loaded in Sections 1-3. Intervention outcome matrices are produced (`outcome.int.mx”`) [insert more details about the matrices produced, I see 3 - 1:6, 7:32 and 33:44]; outcomes and respective R labels are found in Table 4.1. Once again, one can choose to generate outputs for a single city or all cities. 
+
+This component estimates accumulated costs and epidemiological outcomes for a *single* intervention rather than a combination of interventions (use *CascadeCEA-Interventions-2-RunModelAndAccum-SingleIntervention-Deterministic.R*). This component is similar to component 4.2 in the sense that we draw on model functions and data loaded in Sections 1-3. Intervention outcome matrices are produced (`outcome.int.mx”`), and respective R labels are found in Table 4.1. Users can generate outputs for a single city or all cities. 
 
 # 4.4 Probabilistic sensitivity analysis (PSA) for single interventions {-}
 
-In this component we perform PSA on the deterministic model run in component 4.4 to evaluate the extent of parameter uncertainty for a single intervention.  Intervention outcome matrices are produced (`outcome.int.SA.mx`), outcomes and respective labels in R are provided in Table 4.1. Use *CascadeCEA-Interventions-2-RunModelAndAccum-SingleIntervention-PSA.R* found in the *R* directory. 
+In this component we perform PSA on the deterministic model run in component 4.4 to evaluate the extent of parameter uncertainty for a single intervention. Intervention outcome matrices are produced (`outcome.int.SA.mx`), outcomes and respective labels in R are provided in Table 4.1. Use *CascadeCEA-Interventions-2-RunModelAndAccum-SingleIntervention-PSA.R* found in the *R* directory. 
 
 # References {-}
