--- a/vignettes/dd-interventions.Rmd
+++ b/vignettes/dd-interventions.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 # 3.0 Generate possible intervention combinations {-}
 
 
-In this section, we describe the method for creating all possible combinations of the 16 public health interventions selected from the the CDC’s Compendium of Evidence-Based Interventions and Best Practices for HIV Prevention [@EBIcompendium] using the `scale.interventions.combination` function in `LEMpackHIV`. See Figure 3 below for the list of interventions and their respective categories (**Protect, Diagnose, Treat**). We excluded combinations that would not be practically implemented jointly, termed “mutually exclusive combinations” (e.g. two HIV testing interventions delivered in primary care).
+In this section, we describe the method for creating all possible combinations of the 16 public health interventions selected from the the CDC’s Compendium of Evidence-Based Interventions and Best Practices for HIV Prevention [@EBIcompendium] using the `scale.interventions.combination` function in `LEMHIVpack`. See Figure 3 below for the list of interventions and their respective categories (**Protect, Diagnose, Treat**). We excluded combinations that would not be practically implemented jointly, termed “mutually exclusive combinations” (e.g. two HIV testing interventions delivered in primary care).
 
 $~$
 
@@ -33,7 +33,7 @@ $~$
 
 $~$
 
-Next, we set intervention parameters using the `intervention.model.combination` function, and then use the `scale.interventions.combination` function to calculate the scale of delivery inputs at each time step. Both are included in `LEMpackHIV` and the code can be found in the [*R*](https://github.com/HERU-LEM/LEMpackHIV/tree/master/R) directory of the github repository. Recall that scale refers to the proportion of a target population that is provided with an intervention. For HIV prevention programs, scale of delivery was the annual rate of expanded access, or additional scale-up, estimated using the best-available program-specific evidence. In contrast, for HIV testing and care interventions, scale of delivery was defined as the product of setting specific reach and adoption for each intervention *i*, target population *j* and healthcare setting *k*, where reach is defined as the participation rate in a given intervention, conditional on the probability an  individual will access services in setting *k* and the probability the individual will accept the intervention being delivered.
+Next, we set intervention parameters using the `intervention.model.combination` function, and then use the `scale.interventions.combination` function to calculate the scale of delivery inputs at each time step. Both are included in `LEMHIVpack` and the code can be found in the [*R*](https://github.com/HERU-LEM/LEMHIVpack/tree/master/R) directory of the github repository. Recall that scale refers to the proportion of a target population that is provided with an intervention. For HIV prevention programs, scale of delivery was the annual rate of expanded access, or additional scale-up, estimated using the best-available program-specific evidence. In contrast, for HIV testing and care interventions, scale of delivery was defined as the product of setting specific reach and adoption for each intervention *i*, target population *j* and healthcare setting *k*, where reach is defined as the participation rate in a given intervention, conditional on the probability an  individual will access services in setting *k* and the probability the individual will accept the intervention being delivered.
 
 $$Scale_{i,j} = reach_{j,k} \times adoption_{i,k}$$
 
