--- a/vignettes/cc-model_functions.Rmd
+++ b/vignettes/cc-model_functions.Rmd
@@ -96,7 +96,7 @@ $~$
 
 $~$
 
-Note that opioid agonist treatment (OAT) was only available to all PWID and MSM-PWID. As such, the model ODE equations are grouped for MSM and Heterosexual HIV risk groups (non-PWID), PWID and MSM-PWID receiving OAT, and PWID and MSM-PWID non receiving OAT; corresponding R scripts are `ode.list`, `ode.list.OAT`, and `ode.list.offOAT` respectively, found in `LEMpackHIV` and the [*R*](https://github.com/benenns/LEMpackTEST/tree/master/R) directory of the LEMpackHIV github repository. 
+Note that opioid agonist treatment (OAT) was only available to all PWID and MSM-PWID. As such, the model ODE equations are grouped for MSM and Heterosexual HIV risk groups (non-PWID), PWID and MSM-PWID receiving OAT, and PWID and MSM-PWID non receiving OAT; corresponding R scripts are `ode.list`, `ode.list.OAT`, and `ode.list.offOAT` respectively, found in `LEMHIVpack` and the [*R*](https://github.com/benenns/LEMpackTEST/tree/master/R) directory of the LEMHIVpack github repository. 
 
 $~$
 
